2004-11-03  ------ omnetpp-3.0a9 released ------

2004-11-01  Andras Varga

	* main.tcl, modinsp2.tcl: created display string tag for icon size:
	"is=" (can be "vl", "l", "n", "s", "vs" for very large, large, normal, 
	small, very small). Similarly, tag "is2=" sets size of auxiliary icon
	("i2=" tag). The underscore notation ("i=penguin_s") also still exists.

2004-10-27  Andras Varga

	* tkapp.cc: fix: readPerRunOptions() was not protected by try/catch

2004-10-25  Andras Varga
	
	* tkapp.cc, tkcmd.cc, etc: updated for info() and fullPath()
	signature changes (see include/ChangeLog)

2004-10-20  Andras Varga

	* main.tcl, modinsp2.tcl: preparations for new icons, categorized into 
	several subdirs under bitmaps/. Current icons will be moved to
	into the bitmaps/old subdirectory.
	
	Tkenv now loads icons from subdirectories of dirs in OMNETPP_BITMAP-
	_PATH as well, and they can be referenced from display strings like 
	"subdir/icon", "subdir/subsubdir/icon" , etc. If an icon "icon" in 
	a display string is not found, it is tried as "old/icon" as well.

2004-10-18  Andras Varga

	* usability improvement: allowed user interactions during message
	animation (speed can be changed, STOP button can be clicked, inspector
	can be closed, etc). In Tcl-speak: changed "update idletasks" to
	"update" within animation code (graphmodwin_do_animate, etc).

	* tkinsp2.tcl: animation changed to use [clock clicks]-based timing

2004-10-15  Andras Varga

	* modinsp2.tcl, tkcmd.cc: fixed display strings: didn't handle "," and 
	"=" in args to "t=" properly

	* tkapp.cc: improved "Fast Run until next local event" function: now
	it always animates events occurring in the local module

2004-10-15  Andras Varga

	* window.tcl: fix: "View file" option didn't like some file names

2004-10-10  Andras Varga

	* inspector.cc, tkutil.cc/h: fix: label always displayed "0 objects" 
	above inspector listboxes; refactoring

2004-10-10  Andras Varga
